Committing the changes that allow pagination and sorting, althouth I wasn't capable of implementing the pagination directive as a reusable directive, ven though the backend methods that allow that are there.

--- a/InterviewTestPagination/index.html
+++ b/InterviewTestPagination/index.html
@@ -10,11 +10,14 @@
 
 <body ng-app="todoApp">
 
+<div id="loadingDiv" ng-show="loading">
+    Loading...
+</div>
+
 <h2>TODO LIST APP</h2>
 <p>Interview Test: Paginating a 'Todo' model list</p>
 
 <todo-paginated-list></todo-paginated-list>
-
 
 <!-- scripts -->
 <script src="Scripts/angular.min.js"></script>
